Fix navigation: Update Find a Teacher link to point to findteacher.html instead of anchor link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#" class="nav-logo">IndianTutors</a>
                 </div>
                 <div class="nav-right nav-links">
-                    <a href="#teachers" class="nav-link">Find a Teacher</a>
+                    <a href="findteacher.html" class="nav-link">Find a Teacher</a>
                     <button class="btn btn-primary nav-btn login-btn" onclick="openLoginModal()">Log in</button>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                 const { data, error } = await supabase.auth.signInWithOAuth({
                     provider: 'google',
                     options: {
-                        redirectTo: `${window.location.origin}/my-tutor-app-live/home.html`
+                        redirectTo: `${window.location.origin}/home.html`
                     }
                 });
 
