--- a/home.html
+++ b/home.html
@@ -10,9 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Custom Styles -->
-  <script type="module" crossorigin src="/my-tutor-app-live/assets/home-B7Ym9ahw.js"></script>
-  <link rel="stylesheet" crossorigin href="/my-tutor-app-live/assets/home-C-jdIPyY.css">
-  <link rel="stylesheet" crossorigin href="/my-tutor-app-live/assets/styles-DtlC7v4x.css">
+  <script type="module" crossorigin src="/assets/home-CvSgltWF.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/home-C-jdIPyY.css">
+  <link rel="stylesheet" crossorigin href="/assets/styles-DtlC7v4x.css">
 </head>
 <body>
     <!-- Mobile Sidebar Overlay -->
