--- a/insert-test-data.html
+++ b/insert-test-data.html
@@ -19,8 +19,8 @@
 
     <script>
         // Initialize Supabase
-        const supabaseUrl = 'https://sprlwkfpreajsodowyrs.supabase.co';
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNwcmx3a2ZwcmVhanNvZG93eXJzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDk5Njc4NjIsImV4cCI6MjA2NTU0Mzg2Mn0.9asEwbT40SPv_FBxUqm_7ON2CCuRZc2iEmDRiYK5n8k';
+        const supabaseUrl = 'https://qbyyutebrgpxngvwenkd.supabase.co';
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFieXl1dGVicmdweG5ndndlbmtkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDk3MTA1NTMsImV4cCI6MjA2NTI4NjU1M30.eO8Wd0ZOqtXgvQ3BuedmSPmYVpbG3V-AXvgufLns6yY';
         const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
         const testTutors = [
