--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Custom Styles -->
-  <script type="module" crossorigin src="/assets/home-CvSgltWF.js"></script>
+  <script type="module" crossorigin src="/assets/home-DUh8QX7O.js"></script>
   <link rel="stylesheet" crossorigin href="/assets/home-C-jdIPyY.css">
   <link rel="stylesheet" crossorigin href="/assets/styles-DtlC7v4x.css">
 </head>
@@ -343,8 +343,8 @@
     <!-- Authentication Check Script -->
     <script>
         // Supabase Configuration
-        const SUPABASE_URL = 'https://sprlwkfpreajsodowyrs.supabase.co';
-        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNwcmx3a2ZwcmVhanNvZG93eXJzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDk5Njc4NjIsImV4cCI6MjA2NTU0Mzg2Mn0.9asEwbT40SPv_FBxUqm_7ON2CCuRZc2iEmDRiYK5n8k';
+        const SUPABASE_URL = 'https://qbyyutebrgpxngvwenkd.supabase.co';
+        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFieXl1dGVicmdweG5ndndlbmtkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDk3MTA1NTMsImV4cCI6MjA2NTI4NjU1M30.eO8Wd0ZOqtXgvQ3BuedmSPmYVpbG3V-AXvgufLns6yY';
 
         let supabase = null;
         let currentUser = null;
